@@ -37,6 +37,7 @@
  + New map source: Yahoo Maps Japan
  + New atlas format: GPS Sports Tracker
  + New atlas format: Nokia Sports Tracker
+ + New map source: OSM Hikebikemap.de
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
